2003-05-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/include/Makefile.am (forms.h): create forms.h using the
	target stamp-forms, so that it remains untouched when AAA.h is
	regenerated but did not change.

	* lib/include/AAA.h.in: new file. This is the template from which
	AAA.h is generated
	
	* lib/include/.cvsignore: add AAA.h

	* configure.ac: call XFORMS_SET_VERSION; generate AAA.h from AAA.h.in

	* config/xformsinclude.m4 (XFORMS_SET_VERSION): new macro, which
	sets the VERSION string for xforms
	(XFORMS_CHECK_VERSION): simplify a bit

2003-04-24  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* image/image_fits.c (Bad_bpp): use abs() and not fabs(), since
	bpp is an int

2003-04-24  Angus Leeming  <angus.leeming@btopenworld.com>

	Migrate from imake to autoconf/automake.

	* Imakefile:
	* Imakefile.os2:
	* demos/Imakefile:
	* demos/Imakefile.os2:
	* fd2ps/Imakefile:
	* fd2ps/Imakefile.os2:
	* fdesign/Imakefile:
	* fdesign/Imakefile.os2:
	* fdesign/Imakefile.xxx:
	* gl/Imakefile:
	* image/Imakefile:
	* lib/Imakefile:
	* lib/Imakefile.os2:
	* lib/OS2/Imakefile.os2:
	* lib/include/Imakefile: removed.

	* autogen.sh:
	* configure.ac:
	* config/.cvsignore:
	* config/common.am:
	* config/config.guess:
	* config/config.sub:
	* config/cygwin.m4:
	* config/depcomp:
	* config/libtool.m4:
	* config/ltmain.sh:
	* config/xformsinclude.m4: Here be magic ;-)

	* Makefile.am:
	* config/Makefile.am:
	* demos/Makefile.am:
	* demos/fd/Makefile.am:
	* fd2ps/Makefile.am:
	* fd2ps/test/Makefile.am:
	* fdesign/Makefile.am:
	* fdesign/fd/Makefile.am:
	* fdesign/fd4test/Makefile.am:
	* fdesign/notes/Makefile.am:
	* fdesign/spec/Makefile.am:
	* fdesign/xpm/Makefile.am:
	* gl/Makefile.am:
	* image/Makefile.am:
	* lib/Makefile.am:
	* lib/OS2/Makefile.am:
	* lib/bitmaps/Makefile.am:
	* lib/fd/Makefile.am:
	* lib/include/Makefile.am:
	* lib/private/Makefile.am: added.

	* xforms.spec.in: the RPM spec file.

	* lib/local.h: make use of the HAVE_STRCASECMP preprocessor variable.
