@@ -1,3 +1,9 @@
+2003-05-22  Rouben Rostamian  <rostamian@umbc.edu>
+
+	* image/rgb_db.c (fl_lookup_RGBcolor): this function fell off the
+	dist at 1.0pre3. Now it is back again with a shiny new, more efficient
+	implementation.
+
 2003-05-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* lib/include/Makefile.am (forms.h): create forms.h using the
